feature/version_1.0.0: new module in parent pom for the infrastructure layer

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>domain</module>
         <module>application</module>
+        <module>infrastructure</module>
     </modules>
 
     <properties>
