feature/version_1.0.0: added module to infrastructure parent pom.xml

--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -12,6 +12,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>adapter-api</module>
+    <module>adapter-repository</module>
   </modules>
   <artifactId>infrastructure</artifactId>
 
