feature/version_1.0.0: new main module for project start-up

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>domain</module>
         <module>application</module>
         <module>infrastructure</module>
+      <module>main</module>
     </modules>
 
     <properties>
