feature/version_2.0.0: fixed the configuration of maven

--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -12,7 +12,8 @@
   <packaging>pom</packaging>
   <modules>
     <module>adapter-api</module>
-    <module>adapter-repository</module>
+    <module>adapter-repository-files</module>
+    <module>adapter-repository-postgres</module>
   </modules>
   <artifactId>infrastructure</artifactId>
 
