--- a/main/src/main/resources/application.yaml
+++ b/main/src/main/resources/application.yaml
@@ -7,4 +7,4 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-      ddl-auto: create
+      ddl-auto: validate
