feature/version_2.0.0: added liquibase to module configuration

--- a/infrastructure/adapter-repository-postgres/pom.xml
+++ b/infrastructure/adapter-repository-postgres/pom.xml
@@ -63,6 +63,7 @@
       <resource>
         <directory>src/main/resources</directory>
         <includes>
+          <include>db.changelog.data.product.csv</include>
           <include>**/*</include>
         </includes>
       </resource>
