--- a/infrastructure/adapter-repository-postgres/src/main/resources/application.yaml
+++ b/infrastructure/adapter-repository-postgres/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
 spring:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate.show_sql: true
+      use_sql_comments: true
+      format_sql: true
   liquibase:
-    change-log: infrastructure/adapter-repository-postgres/src/main/resources/db/changelog/db.changelog-master.yaml
+  change-log: infrastructure/adapter-repository-postgres/src/main/resources/db/changelog/db.changelog-master.yaml
+logging:
+  level:
+    org.springframework.jdbc.core.JdbcTemplate: DEBUG
+    org.springframework.jdbc.core.StatementCreatorUtils: TRACE
